# hello-rocket

./: .gitignore  Cargo.toml  Rocket.toml
.github/workflows/: rust.yml
src/: main.rs
