[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["Brandon Poole <brandoncpoole@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "serve"]
